add_library(fabm_models_hereon OBJECT
            omexdia_p/omexdia_p.F90
           )

add_dependencies(fabm_models_hereon fabm_base)

#-----------------------------------------------------------------------
# Copyright (C) 2014 - Karsten Bolding and Jorn Bruggeman (BB)         !
#-----------------------------------------------------------------------
